--- a/app.json
+++ b/app.json
@@ -2,7 +2,13 @@
   "pages":[
     "pages/index/index",
     "pages/login/login",
-    "pages/reinformation/reinformation"
+    "pages/reinformation/reinformation",
+    "pages/userinformation/userinformation",
+    "pages/myreservation/myreservation",
+    "pages/bookinginformation/bookinginformation",
+    "pages/changepassword/changepassword",
+    "pages/ticketdetails/ticketdetails"
+    
   ],
   "window":{
     "backgroundTextStyle":"dark",
@@ -43,6 +49,14 @@
     "van-grid-item": "@vant/weapp/grid-item/index",
     "van-calendar": "@vant/weapp/calendar/index",
     "van-checkbox": "@vant/weapp/checkbox/index",
-    "van-checkbox-group": "@vant/weapp/checkbox-group/index"
+    "van-checkbox-group": "@vant/weapp/checkbox-group/index",
+    "van-field": "@vant/weapp/field/index",
+    "van-notify": "@vant/weapp/notify/index",
+    "van-action-sheet": "@vant/weapp/action-sheet/index",
+    "van-picker": "@vant/weapp/picker/index",
+    "van-toast": "@vant/weapp/toast/index",
+    "van-popup": "@vant/weapp/popup/index",
+    "van-area": "@vant/weapp/area/index",
+    "van-panel": "@vant/weapp/panel/index"
   }
 }
