--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -50,11 +50,11 @@
 			"current": -1,
 			"list": []
 		},
-		"game": {
+		"plugin": {
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
+		"game": {
 			"current": -1,
 			"list": []
 		},
@@ -64,7 +64,43 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": 0,
+					"name": "我的",
+					"pathName": "pages/login/login",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "修改密码",
+					"pathName": "pages/changepassword/changepassword",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "用户基本信息",
+					"pathName": "pages/userinformation/userinformation",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "我的预约",
+					"pathName": "pages/myreservation/myreservation",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "订票信息",
+					"pathName": "pages/bookinginformation/bookinginformation",
+					"query": "",
+					"scene": null
+				}
+			]
 		}
 	}
 }
