--- a/app.json
+++ b/app.json
@@ -45,6 +45,7 @@
     "van-row": "@vant/weapp/row/index",
     "van-col": "@vant/weapp/col/index",
     "van-button": "@vant/weapp/button/index",
+    "van-tag": "@vant/weapp/tag/index",
     "van-cell": "@vant/weapp/cell/index",
     "van-cell-group": "@vant/weapp/cell-group/index",
     "van-icon": "@vant/weapp/icon/index",
