--- a/project.config.json
+++ b/project.config.json
@@ -26,10 +26,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-
 		"useIsolateContext": true
-
-
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
@@ -91,6 +88,13 @@
 					"id": -1,
 					"name": "订票信息",
 					"pathName": "pages/bookinginformation/bookinginformation",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "预约",
+					"pathName": "pages/subscribe/subscribe",
 					"query": "",
 					"scene": null
 				}
