--- a/app.json
+++ b/app.json
@@ -71,5 +71,10 @@
     "van-area": "@vant/weapp/area/index",
     "van-panel": "@vant/weapp/panel/index",
     "van-uploader": "@vant/weapp/uploader/index"
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示" 
+    }
   }
 }
