--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
-  "pages": [   
+  "pages": [
     "pages/index/index",
     "pages/test/test",
-    "pages/upload/upload", 
+    "pages/upload/upload",
     "pages/login/login",
     "pages/reinformation/reinformation",
     "pages/subscribe/subscribe",
     "pages/subscribeAdd/subscribeAdd",
+    "pages/subscribeEdit/subscribeEdit",
     "pages/userinformation/userinformation",
     "pages/myreservation/myreservation",
     "pages/bookinginformation/bookinginformation",
@@ -75,7 +76,7 @@
   },
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示" 
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   }
 }
