--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/reinformation/reinformation",
     "pages/subscribe/subscribe",
     "pages/subscribeAdd/subscribeAdd",
+    "pages/subscribeEdit/subscribeEdit",
     "pages/userinformation/userinformation",
     "pages/myreservation/myreservation",
     "pages/bookinginformation/bookinginformation",
@@ -78,7 +79,7 @@
   },
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示" 
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   }
 }
