--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "pages": [
-    "pages/userLogin/userLogin",
-    "pages/test/test",
+    "pages/logs/logs",
     "pages/launch/launch",
     "pages/register/register",
-   
+    "pages/userLogin/userLogin",
     "pages/index/index",
     "pages/login/login",
     "pages/reinformation/reinformation",
@@ -20,9 +19,9 @@
     "pages/audienceguidelines/audienceguidelines",
     "pages/museumintroduced/museumintroduced",
     "pages/location/location",
-    "pages/logs/logs",
-    "pages/upload/upload"
- 
+    
+    "pages/upload/upload",
+    "pages/test/test"
     
   ],
   "window": {
