--- a/app.json
+++ b/app.json
@@ -1,13 +1,10 @@
 {
   "pages": [
-    "pages/logs/logs",
+    
     "pages/launch/launch",
     "pages/userLoginInfo/userLoginInfo",
     "pages/register/register",
-<<<<<<< HEAD
     "pages/userLogin/userLogin",
-=======
->>>>>>> test
     "pages/index/index",
     "pages/login/login",
     "pages/reinformation/reinformation",
@@ -23,15 +20,9 @@
     "pages/audienceguidelines/audienceguidelines",
     "pages/museumintroduced/museumintroduced",
     "pages/location/location",
-<<<<<<< HEAD
-    
     "pages/upload/upload",
-    "pages/test/test"
-    
-=======
-    "pages/logs/logs",
-    "pages/upload/upload"
->>>>>>> test
+    "pages/test/test",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "dark",
