--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    
+    "pages/logs/logs",
     "pages/launch/launch",
     "pages/userLoginInfo/userLoginInfo",
     "pages/register/register",
@@ -20,8 +22,7 @@
     "pages/museumintroduced/museumintroduced",
     "pages/location/location",
     "pages/upload/upload",
-    "pages/test/test",
-    "pages/logs/logs"
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "dark",
