--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
     "pages/subscribe/subscribe",
     "pages/subscribeAdd/subscribeAdd",
     "pages/subscribeEdit/subscribeEdit",
+    "pages/subscribeSuccess/subscribeSuccess",
     "pages/userinformation/userinformation",
     "pages/myreservation/myreservation",
     "pages/bookinginformation/bookinginformation",
