--- a/project.config.json
+++ b/project.config.json
@@ -20,6 +20,7 @@
 		"checkInvalidKey": true,
 		"checkSiteMap": false,
 		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
 		"babelSetting": {
 			"ignore": [],
 			"disablePlugins": [],
@@ -27,20 +28,11 @@
 		},
 		"useIsolateContext": true,
 		"useCompilerModule": false,
-<<<<<<< HEAD
-		"userConfirmedUseCompilerModuleSwitch": false,
-<<<<<<< HEAD
-		"compileHotReLoad": false
-=======
-		"useIsolateContext": true
->>>>>>> b3b6a42c4823b800897a121ea84e82f72a3ae3d6
-=======
 		"userConfirmedUseCompilerModuleSwitch": false
->>>>>>> 50bf60ce298bf32c21b93d7605f2dc9452d23fde
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
-	"appid": "wx113c190ca2512b25",
+	"appid": "wx2ccf2cac713758ad",
 	"projectname": "vantdemo",
 	"cloudfunctionTemplateRoot": "",
 	"watchOptions": {
@@ -50,8 +42,6 @@
 		"hidedInDevtools": []
 	},
 	"scripts": {},
-	"simulatorType": "wechat",
-	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -66,6 +56,7 @@
 			"list": []
 		},
 		"game": {
+			"current": -1,
 			"list": []
 		},
 		"gamePlugin": {
@@ -112,8 +103,8 @@
 				},
 				{
 					"id": 5,
-					"name": "pages/Modifyinformation/Modifyinformation",
-					"pathName": "pages/Modifyinformation/Modifyinformation",
+					"name": "launch",
+					"pathName": "pages/launch/launch",
 					"query": "",
 					"scene": null
 				}
