--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
-	"appid": "wx2ccf2cac713758ad",
+	"appid": "wx270ec3e840ed2ad8",
 	"projectname": "vantdemo",
 	"cloudfunctionTemplateRoot": "",
 	"watchOptions": {
