--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#1296DB",
-    "navigationBarTitleText": "票务预约系统",
+    "navigationBarTitleText": "圣东票务在线预约移动端软件",
     "navigationBarTextStyle": "white",
     "enablePullDownRefresh": true
   },
