--- a/project.config.json
+++ b/project.config.json
@@ -1,123 +1,141 @@
 {
-	"description": "项目配置文件",
-	"packOptions": {
-		"ignore": []
-	},
-	"setting": {
-		"urlCheck": false,
-		"es6": true,
-		"enhance": false,
-		"postcss": true,
-		"preloadBackgroundData": false,
-		"minified": true,
-		"newFeature": false,
-		"coverView": true,
-		"nodeModules": true,
-		"autoAudits": false,
-		"showShadowRootInWxmlPanel": true,
-		"scopeDataCheck": false,
-		"uglifyFileName": false,
-		"checkInvalidKey": true,
-		"checkSiteMap": false,
-		"uploadWithSourceMap": true,
-		"compileHotReLoad": false,
-		"babelSetting": {
-			"ignore": [],
-			"disablePlugins": [],
-			"outputPath": ""
-		},
-		"useIsolateContext": true,
-		"useCompilerModule": true,
-		"userConfirmedUseCompilerModuleSwitch": false
-	},
-	"compileType": "miniprogram",
-	"libVersion": "2.12.0",
-	"appid": "wx270ec3e840ed2ad8",
-	"projectname": "vantdemo",
-	"cloudfunctionTemplateRoot": "",
-	"watchOptions": {
-		"ignore": []
-	},
-	"debugOptions": {
-		"hidedInDevtools": []
-	},
-	"scripts": {},
-	"simulatorType": "wechat",
-	"simulatorPluginLibVersion": {},
-	"condition": {
-		"search": {
-			"current": -1,
-			"list": []
-		},
-		"conversation": {
-			"current": -1,
-			"list": []
-		},
-		"plugin": {
-			"current": -1,
-			"list": []
-		},
-		"game": {
-			"current": -1,
-			"list": []
-		},
-		"gamePlugin": {
-			"current": -1,
-			"list": []
-		},
-		"miniprogram": {
-			"current": -1,
-			"list": [
-				{
-					"id": 0,
-					"name": "我的",
-					"pathName": "pages/login/login",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": 1,
-					"name": "改签",
-					"pathName": "pages/reinformation/reinformation",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "用户基本信息",
-					"pathName": "pages/userinformation/userinformation",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "订票信息",
-					"pathName": "pages/bookinginformation/bookinginformation",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "预约",
-					"pathName": "pages/subscribe/subscribe",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": 5,
-					"name": "launch",
-					"pathName": "pages/launch/launch",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/location/location",
-					"pathName": "pages/location/location",
-					"query": "",
-					"scene": null
-				}
-			]
-		}
-	}
+  "description": "项目配置文件",
+  "packOptions": {
+    "ignore": []
+  },
+  "setting": {
+    "urlCheck": false,
+    "es6": true,
+    "enhance": false,
+    "postcss": true,
+    "preloadBackgroundData": false,
+    "minified": true,
+    "newFeature": false,
+    "coverView": true,
+    "nodeModules": true,
+    "autoAudits": false,
+    "showShadowRootInWxmlPanel": true,
+    "scopeDataCheck": false,
+    "uglifyFileName": false,
+    "checkInvalidKey": true,
+    "checkSiteMap": false,
+    "uploadWithSourceMap": true,
+    "compileHotReLoad": false,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    },
+    "useIsolateContext": true,
+    "useCompilerModule": false,
+    "userConfirmedUseCompilerModuleSwitch": false,
+    "userConfirmedBundleSwitch": false,
+    "packNpmManually": false,
+    "packNpmRelationList": [],
+    "minifyWXSS": true,
+    "useMultiFrameRuntime": false,
+    "useApiHook": true,
+    "bundle": false
+  },
+  "compileType": "miniprogram",
+  "libVersion": "2.12.0",
+  "appid": "wx270ec3e840ed2ad8",
+  "projectname": "vantdemo",
+  "cloudfunctionTemplateRoot": "",
+  "watchOptions": {
+    "ignore": []
+  },
+  "debugOptions": {
+    "hidedInDevtools": []
+  },
+  "scripts": {},
+  "simulatorType": "wechat",
+  "simulatorPluginLibVersion": {},
+  "condition": {
+    "plugin": {
+      "list": []
+    },
+    "game": {
+      "list": []
+    },
+    "gamePlugin": {
+      "list": []
+    },
+    "miniprogram": {
+      "list": [
+        {
+          "id": 0,
+          "name": "我的",
+          "pathName": "pages/login/login",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": 1,
+          "name": "改签",
+          "pathName": "pages/reinformation/reinformation",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "用户基本信息",
+          "pathName": "pages/userinformation/userinformation",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "订票信息",
+          "pathName": "pages/bookinginformation/bookinginformation",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "预约",
+          "pathName": "pages/subscribe/subscribe",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": 5,
+          "name": "launch",
+          "pathName": "pages/launch/launch",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/location/location",
+          "pathName": "pages/location/location",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/index/index",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/userLogin/userLogin",
+          "pathName": "pages/userLogin/userLogin",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/myreservation/myreservation",
+          "pathName": "pages/myreservation/myreservation",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/reinformation/reinformation",
+          "pathName": "pages/reinformation/reinformation",
+          "scene": null
+        }
+      ]
+    }
+  }
 }
